sw acaba respomnsive

--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ margin: 0px;
    top: 12vh;
    font-family: 'Eras Demi ITC';
   font-weight: 500;
-  overflow: ;
+  
   margin-bottom: 15vh!important;
   
 
@@ -259,10 +259,7 @@ width: 100vw;
 
   border-top:1vh white solid!important;
 }
-.fondosec3-alter{
- 
- 
-}
+
 .fondosec3-ali{
   display: flex;
   position: relative;
@@ -370,7 +367,7 @@ width: 100vw;
   border: 3px solid #eee!important;
   height: 7vw;
   width: 7vw;
-  
+  font-family: 'Josefin Sans';
   font-size: 4vw!important;
   border-radius: 50%!important;
 }
@@ -384,9 +381,6 @@ width: 100vw;
 
   right:72vw!important;
   font-size: 3vw!important;
-}
-.container-contador{
- 
 }
 
 .texto-horas{
@@ -685,7 +679,7 @@ bottom: -60px!important;
  .fap-btn4-3{
    
  position: absolute;
-
+font-family: 'Josefin Sans';
   bottom:-59px;
  left: -110px;
  }
@@ -933,16 +927,7 @@ height: 500.28px!important;
 
 
 
-.modal-cont{
-  
-  
-  
- 
-}
-.modal {
-  
-  
-}
+
 
   
 
@@ -976,29 +961,29 @@ white-space: normal;
   overflow: hidden;
 }
 .mapaes{
-  width: 100%;
-  padding: 0;
+  
+  width: 100vw;
 }
 /*-----------------------------------SECCION QUE ES ---------------------------------------*/
 .text-moneda{
   background-color: white!important;
 }
 .textappcon{
+  
+  
   position: relative;
   background-color:white!important;
   overflow: hidden;
-  
-  
-}
+  }
+  .text-App-g{
+    position: relative;
+    left: -1.5vw!important;
+    width: 102vw!important;
+  }
 .text-App{
   position: relative;
-  width: 175vw!important;
-  
-  
-
-  
-  background-color:white!important;
- 
+  width: 175vw!important;  
+  background-color:white!important; 
 }
 .img-goo{
   
@@ -1481,8 +1466,14 @@ margin:5vw;
 
 /*--------------------------------------------------PESTAÑAROAPTOMAP-----------------------------------------------*/
 .road{
-  margin: 100px 0 0 0;
-  background-color:white;
+  
+  margin: 40px 0 0 0!important;
+  
+  
+}
+.maparoad{
+  margin-top: 10px;
+  width: 100%;
 }
 
 /*@keyframes   bordegirtariovh
@@ -1595,7 +1586,14 @@ font-family:'Lato';
 }
 /*----------------------------------------------------------------------medias-------------------------------------------------*/
 
-
+@media only screen and (max-width:3000px){
+  .focoenv-cont{
+    bottom: -30vw!important; 
+  }
+  .contenedor-engra{
+    height: 3200px;
+  }
+  }
 @media only screen and (max-width:2000px){
   .focoenv-cont{
     bottom: -4vw!important; 
@@ -1985,7 +1983,7 @@ margin-top: 3vw;
   
   
   .texto-contenedor{
-margin-top: -8vh!important;
+margin-top: 50vw!important;
 
   }
   .num-conta{
@@ -2084,7 +2082,7 @@ margin-top: -8vh!important;
     top: -138vw!important;
     }
     .texto-contenedor{
-      top: 50vw!important;
+      top: 60vw!important;
     }
 }
  
@@ -2121,11 +2119,11 @@ margin-top: -8vh!important;
 .textsyn2{
   font-size: 4vw;
   top: -38vw;
-  left: 40vw;
+  left: 38vw;
 }
 .mintext2{
   top: -15vw;
-  left: 20vw;
+  left: 15vw;
 }
 .textbtn4{
   font-size: 4.5vw!important;
@@ -2133,6 +2131,7 @@ margin-top: -8vh!important;
 .textsyn3{
   font-size: 4vw!important;
   top: 65vw;
+  left: 55vw;
 }
 .mintext3{
   top: 13vw;
@@ -2146,12 +2145,12 @@ margin-top: -8vh!important;
   }
   /*--------------------------------------contador----------------------------*/
   .texto-contenedor{
-    margin-top: 9vw!important;
+    margin-top: 15vw!important;
   left: 25vw;
     font-size: 4vw!important;
     
       }
-  /*------------------------------------------------------------------------*
+  /*------------------------------------------------------------------------*/
   .texto-min{
     
     right:33vw!important;
@@ -2209,7 +2208,7 @@ margin-top: -8vh!important;
   
 }
 .textsyn3{
-  left: 65vw;
+  left: 55vw;
   top: 98vw;
 }
 .mintext3{
@@ -2274,13 +2273,15 @@ margin-top: -8vh!important;
   .textsyn{
     top: 85vw!important;
     left: -20vw;
+    white-space: nowrap;
   }
   .mintext{
+    left: -20vw!important;
     font-size: 4vw!important;
   }
 
   .fap-btn3{
-    left: 62vw;
+    left: 59vw;
   }
   .textbtn3{
     font-size: 6vw!important;
@@ -2316,9 +2317,11 @@ margin-top: -8vh!important;
   margin-top: -2vw;
   
   
-  margin-bottom:100px ;
+  margin-bottom:100px ; 
   
-  
+}
+.texto-contenedor{
+  margin-top: -2vw!important;
 }
 }
 
@@ -2332,7 +2335,7 @@ margin-top: -8vh!important;
     font-size: 20vw;
   } 
   .fap-btn2{
-     left: 2vw;
+     left: -4vw;
      top: 25vw!important;
    }
   .textsyn{
@@ -2343,24 +2346,27 @@ top: 95vw!important;
     top: 93vw;
     left: -20vw!important;
   }
+  .fap-btn3{
+    left: 55vw;
+  }
   .focoenv-cont{
     top: -250vw!important;
   }
   /*-------------------------------------------------------------------------------------*/
   .texto-contenedor{
-    margin-top: -20vw!important;
+    margin-top: -1vw!important;
     left: 30vw;
     font-size: 4vw!important;
     
       }
       .texto-horas{
-        left: 50vw!important;
+        left: 45vw!important;
       }
       .texto-min{
-        left: 70vw!important;
+        left: 65vw!important;
       }
       .texto-seg{
-        left: 90vw!important;
+        left: 85vw!important;
       }
       .moneda{
         
@@ -2519,21 +2525,55 @@ resize: none;
   }
 }
 
-@media only screen and (max-width: 363px) {
+@media  screen and (max-width: 363px) {
 
-
+  .fap-btn2-1 {
+    height: 200px;
+    width: 200px;
+    left: -13vw;
+    top: -10vw;
+  }
 
   .fap-btn2{
     top: 40vw!important;
-    left: -2vw;
+    left: -9vw;
+  }
+  .fap-btn2 svg {
+    left: -7vw!important;
+    top: -5vw;
+    width: 45mm;
+    height: 45mm;
   }
   .textsyn{
-    top: 115vw!important;
+    top: 105vw!important;
     left: -27vw;
   }
   .mintext{
-    top: 115vw;
+    top: 102vw;
     margin-left: 2vw!important;
+  }
+  .fap-btn3{
+    left: 40vw;
+  }
+  .fap-btn3-2{
+    width: 200px;
+    height: 200px;
+    left: -15vw!important;
+    top: -10vw;
+  }
+  .textsyn2{
+   
+  left: 28vw!important;
+
+  }
+  .fap-btn3 svg {
+    left: -2vw!important;
+    top: -4vw!important;
+    width: 40mm;
+    height: 40mm;
+  }
+  .mintext2{
+    left: 2vw!important;
   }
   .fap-btn4{
     top: 150vw!important;
@@ -2570,5 +2610,49 @@ top: 100vw;
       font-family: 'Eras ITC';
       color: #033462;
   }
+  .texto-contenedor{
+    top: 85vw!important;
+  }
+  .contador-fap{
+    height: 9vw;
+  }
+  .focoenv-cont {
+    top: -265vw!important;
+}
 }
  
+@media only screen and (max-width: 330px) {
+  .texto-contenedor{
+    top: 95vw!important;
+    font-size: 4.5vw!important;
+    margin-left: -10vw!important;
+  
+  }
+  .texto-horas{
+    left: 45vw!important;
+  }
+  .texto-min{
+    left: 50vw!important;
+  }
+  .cap{
+  
+    line-height: 5vw;
+  }
+  
+  .cont-li-cap{
+    height: 10vw!important;
+  }
+  .rectanguloimg {
+    top: -40vw;
+    height: 90vw!important;
+    width: 90vw!important;
+  }
+  .container-contador{
+   margin-left:-15vw!important;
+  }
+  .num-conta{
+   
+    font-size: 4vw;
+  }
+  
+}
