se suben cambios delos modales de proyectos

--- a/src/App.css
+++ b/src/App.css
@@ -982,7 +982,8 @@ white-space: normal;
   }
 .text-App{
   position: relative;
-  width: 175vw!important;  
+  width: 175vw!important;
+  left: -1.5vw;  
   background-color:white!important; 
 }
 .img-goo{
