--- a/src/App.css
+++ b/src/App.css
@@ -95,7 +95,7 @@ margin: 0px;
  
 
  .contenedor{
-   position: absolute;
+   
   width: 100vw!important;
   
     overflow: hidden;
@@ -1062,6 +1062,8 @@ text-align: center;
   font-size: 30px!important;
   font-weight: 450;
   width: 100%;
+  
+  align-items: center;
   border-radius: 95px!important;
 }
 
@@ -1082,6 +1084,10 @@ text-align: center;
 }
 .PREGIMG{
   height: 100%;
+}
+.mas{
+  justify-content: center!important;
+  align-items: center!important;
 }
 
 /*---------------------------------------------------Newlester----------------------------------------*/
@@ -2029,7 +2035,7 @@ margin-top: 50vw!important;
   .fondo-opa{
     
     overflow: hidden;
-    margin: 1vw;
+    margin: 2vw;
     padding: 1vw 20vw 1vw 20vw!important;
 
   }
