--- a/src/componentes/whitepaper/Whitepaper.css
+++ b/src/componentes/whitepaper/Whitepaper.css
@@ -28,7 +28,7 @@
     align-items: center;
     text-align: center;
     background-color: red;
-    margin-top: 50px!important;
+    margin-top: 5vw!important;
 }
 .control-para{
     background-color: white!important;
