--- a/src/App.css
+++ b/src/App.css
@@ -1668,16 +1668,97 @@ margin:5vw;
 
 /*--------------------------------------------------PESTAÑAROAPTOMAP-----------------------------------------------*/
 .road{
+  align-items: center;
+  text-align: center;
+justify-content: center;
   
-  margin: 40px 0 0 0!important;
+  margin: 60px 0 0 0!important;
   
   
 }
 .maparoad{
-  margin-top: 10px;
+  align-items: center;
+  text-align: center;
+justify-content: center;
   width: 100%;
+  z-index: 1;
 }
+.text-roap-map{
+  width: 100vw;
 
+  position: absolute;
+  color:black;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: 'Josefin Sans';
+  font-size: 1.7vw;
+  line-height: 1.5vw;
+  font-weight: bold;
+  z-index: 2;
+}
+.text-roap-map h1{
+  filter: drop-shadow(7px 11px 20px rgba(0, 0, 0, 1));
+  justify-content: flex-start;
+  font-family: Barlow;
+  font-weight: 900;
+  align-items: left;
+  text-align: center;
+  color: #025889;
+  font-size: 10vw;
+}
+.text-roap-1{
+  
+  width: 15vw;
+  margin-top: 3.5vw;
+  text-align: left;
+  padding: 1px;
+  margin-left:1rem;
+}
+.text-roap-2{
+  margin-top: -4.5vw;
+  padding: 1px;
+  width: 17vw;
+  text-align: right;
+  margin-left:25%;
+}
+.text-roap-3{
+  width: 17%;
+  margin-top: 20%;
+  margin-left: 13vw ;
+}
+.text-roap-4{
+  margin-left: 41%;
+  margin-top: -4%;
+  width: 15%;
+}
+.text-roap-5{
+  width: 17%;
+  margin-top: 14%;
+  margin-left:21%;
+}
+.text-roap-6{
+  width: 15%;
+  margin-left: 52%;
+  margin-top: -3.5%;
+  
+}
+.text-roap-7{
+  width: 15%;
+  margin-top: 18%;
+  margin-left: 35%;
+  text-align: right;
+  
+  
+}
+.text-roap-8{
+  width: 15%;
+  margin-left: 68%;
+  margin-top: -3%;
+  text-align: right;
+  
+  
+}
 /*@keyframes   bordegirtariovh
  
   10%{
