--- a/src/componentes/home/css/styles.css
+++ b/src/componentes/home/css/styles.css
@@ -2,13 +2,34 @@
     background-image: url("../../../images/fondo_ventajas.svg");
     width: 640px;
     height: 427px;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     z-index: 1000;
     background-color: #fff;
+    
 }
 
 .text-style{
     font-size: 1.5rem;
+}
+.text-zep{
+
+  white-space: normal;
+  
+    
+
+    
+}
+.img-meto{
+    
+    
+height: auto!important;
+
+word-wrap: break-word!important;
+
+
+    
+    
+
 }
