--- a/src/App.css
+++ b/src/App.css
@@ -1388,12 +1388,14 @@ font-family: 'Josefin Sans', sans-serif;
 
 }
 .con-footer img{
-  margin: 0px 10px 10px 10px;
+  margin: 2vw 10px 10px 10px;
   text-align: center;
   
 }
 .conectate{
-  font-size: 4vw;
+  margin-top: 1vw;
+  margin-bottom: 10vw!important;
+  font-size: 60px;
 }
 .con-conecta{
 display: flex;
