--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,8 @@
 
 body{
   margin: 0;
-  background-image: url("./images/fondogalaxy.png");
-  background-size:cover;
+  background-image: url("");
+  background-size:center;
   background-attachment: fixed;
  
   
@@ -68,10 +68,10 @@ margin: 0px;
   margin: 0px;
  }
  .fondogalaxy{
-   background-image:url("./images/fondogalaxy.png")!important;
-   background-size:cover;
-   background-position:center;
-   background-attachment: fixed;
+   background-image:url("./images/fondogalaxy.svg")!important;
+   background-size:contain;
+   background-position:top;
+   
    background-repeat:no-repeat;
    
    
