fix: form of sign up with more validations

--- a/src/App.css
+++ b/src/App.css
@@ -1480,7 +1480,7 @@ position: relative;
 .form-control{
 
 background-color: #ffffff80!important;
-color: white!important;
+color: #000000 !important;
 font-family:'Lato';
   font-weight:bold!important;
 
