--- a/src/App.css
+++ b/src/App.css
@@ -92,12 +92,7 @@ margin: 0px;
     
     
  }
- @keyframes mianimacion{
  
-  100%{
-    transform: rotateY(360deg);
-   }
- }
  
 
  .contenedor{
@@ -112,13 +107,13 @@ margin: 0px;
 
    position: relative;
   filter: drop-shadow(7px 13px 9px rgba(0, 0, 0, 1));
-  letter-spacing: 1px;
+  
   font-size: 4.5vw;
    margin-top: 100px;
    font-family: 'Eras Demi ITC';
   font-weight: 500;
   
-  margin-bottom: 15vh!important;
+ 
   
 
  
@@ -127,10 +122,10 @@ margin: 0px;
 
 filter: drop-shadow(0px 9px 6px rgba(204, 196, 192, 0.753));
     left: 6vw;
-    top: 20px;
+    
     position: relative;    
-    line-height: 100%;
-    margin:0px;
+   
+    
     text-align:left;
     font-family: 'Eras Demi ITC';
     font-style: oblique;
@@ -146,13 +141,12 @@ filter: drop-shadow(0px 9px 6px rgba(204, 196, 192, 0.753));
 
   filter: drop-shadow(0px 9px 6px rgba(204, 196, 192, 0.753));
       left: -10px;
-      top: 0px;
       position: relative;
    
      
       white-space: normal;
-      line-height: 40%;
-      margin:0px!important;
+      
+     
       text-align: left;
       font-family: 'Eras Demi ITC';
       font-style: oblique;
@@ -445,27 +439,14 @@ margin-bottom: 1vw;
  list-style: none;
  margin-top: 20vw;
  padding: 0px;
-  
+ 
+  text-align: center;
  margin-bottom: 0px!important;
  justify-content: center;
  overflow: hidden;
  
 }
-.rectangulo1 img{
-  
-  justify-content: center;
-  
-  
-  
-  position: relative;
-  
-  margin:0px!important;
-padding: 0px;
-  margin-bottom: 0px!important;
-  width: 75vw;
-  height: 8vw;
-  border-radius:10px ;  
-}
+
 .text-rec-may{
   line-height: 35px!important;
   white-space: nowrap;
@@ -482,16 +463,23 @@ padding: 0px;
     
   }
   .tecno{
- overflow: hidden;
- background:white;
- background-size:cover;
- background-position:center;
- padding: 0px!important;
- margin-bottom: 0px!important;
+    display: flex;
+    position: relative;
+    margin: 0px;
+    width:100%!important;
+    height: auto;
+    overflow: hidden;
+    justify-content: center;
+ 
+ 
   }
-  .img-tecno{
-    width: vw!important;
-    height: 40vw!important;
+  .tecno img{
+    display: flex;
+    
+    
+   width: 100%!important;
+   
+    height: 50%!important;
   
     
   }
@@ -511,15 +499,20 @@ padding: 0px;
     font-weight: normal!important;
     font-family: 'Segoe UI';
     font-style: normal;
+    margin-top: 2vw!important;
   }
 /*-----------------------------------SECCION 4 Proyectos------------------------------------------------*/
 .walp{
   
   position: relative;
-  
+  height: 50%;
   justify-content: center;
-  overflow: hidden;
+  overflow: hidden!important;
   padding: 0px;
+  
+  animation-name: walpanime;
+  animation-duration: 1s;
+  animation-iteration-count: infinite; 
   
 }
 
@@ -534,17 +527,57 @@ padding: 0px;
   width: 600vw;
   height: 45vw;
   top: 1vw;
+  
   left: -250vw;  
   margin: 0px;
+   
 }
+@keyframes walpanime{
+ 
+  100%{
+    filter: brightness(150%);
+   
+    
+   }
+  }
+/*-----------------------------------------------ventajas------------------------------------------*/
 .ventajas-cuerpo{
   background: linear-gradient(to bottom,#043361, #02182e);
   border-right: 1vw solid white;
   border-left: 1vw solid white;
-font-family: "Josefin Sans";
-
- 
+  text-align: center;
+  font-size: 25px!important;
+  align-items: center;
+  
+font-family: "Josefin Sans"; 
 }
+.ventajas-cuerpo-min{
+  font-size: 3.5vw!important;
+  line-height: normal;
+  font-family: "Lato"; 
+  text-align: justify!important;
+  width: 100%;
+  
+ 
+  margin: 0!important;
+}
+.ventajas-cuerpo-index{
+  font-weight:normal!important;
+  
+  background-color: #025889;
+  align-items: center!important;
+}
+.ventajas-cuerpo-index2{
+  background-color: #043361;
+  align-items: center!important;
+
+}
+.titu-ventajas{
+  color: #FAD000!important;
+  margin-top: 1vw;
+  
+}
+
 /*-------------------------------------------------------FOCO-----------------------------------*/
 .sec6{
   position:relative;
@@ -989,6 +1022,7 @@ white-space: normal;
   background-image: radial-gradient(farthest-corner at 45px 45px , #05198d 0%, #05002A 100%);
   font-family: 'lato';
   overflow: hidden;
+
 }
 .mapaes{
   
@@ -1003,6 +1037,7 @@ white-space: normal;
   font-family: 'Lato';
   font-weight: bold;
   font-size: 3vw;
+  z-index: 1;
 }
 .dis-tokens{
   position:absolute;
@@ -1073,6 +1108,7 @@ white-space: normal;
   margin-left: 3vw;
   }
   .sun-usd{
+    z-index: 1!important;
     font-size: 2vw;
     margin-top: -12%;
   }
@@ -2118,14 +2154,14 @@ margin-top: 3vw;
     }
   }
   @media screen and (max-width:890px){
-/*-------------------media foco/*-----------------*/
-.textbtn2{
+    /*-------------------media foco/*-----------------*/
+       .textbtn2{
   font-size: 3vw!important;
-}
-.focoenv-cont{
+    }
+          .focoenv-cont{
   bottom: 78vw!important; 
 
-}
+   }
 
     .textsyn3{
       margin-top: 13vw!important;    
@@ -2225,15 +2261,16 @@ margin-top: 3vw;
 }
   /*-----------------------------media seccion1-------------------------*/
   .revo1{
-    line-height: 13vh;
+   
     font-size: 7.5vw!important;
     text-align: center!important;
+    margin: 4vw 0 0 0 ;
       
       }
       .tec1{
         text-align: center!important;
         font-size: 7.5vw;
-        margin-bottom: 1vh;
+        margin-bottom: 1vw;
       }
       .moneda1{
         margin-top: 100px;
@@ -2244,8 +2281,8 @@ margin-top: 3vw;
         
         position: absolute!important;
         height: 45vw;
-        left: 64vw !important;
-        width: 40vw!important;
+        left: 40vw !important;
+        width: 45vw!important;
         z-index: -2;
         animation: none;
         
@@ -2253,7 +2290,7 @@ margin-top: 3vw;
       }
       .parte{
        
-       
+       line-height: normal;
         overflow: hidden;
       }
       .boton1{
@@ -2267,17 +2304,42 @@ margin-top: 3vw;
         position: relative;
         justify-self: start;
        justify-content: center;
-        margin: 0 0 0 -1vw;
+        margin: 0 0 0 -10vw;
       
-        font-size: 3.5vw;
+        font-size: 4vw;
         
         white-space:normal;
         font-weight: bold;
-        line-height: 6vh!important;
+        line-height: 6vw!important;
       } 
+      /*------------------------------------------------------rectangulo cap-------------------------------*/
+      .rectanguloimg{
+  
+       left: 2vw;
+        width: 100vw;
+        height: 28vw;
+      
+      }
+      /*--------------------------------------------------------tecnologias--------------------------------*/
+      .tecno img{
+       
+        
+       width: 125%!important;
+       
+        height: 80%!important;
+      
+        
+      }
+      
+      /*---------------------------------------walpaper--------------------------------------------------------*/
+     
+.walp-img{
+  left: -246vw!important;
+}
+     
       
       /*------------------------------seccion ventajas------------------------------*/
-  .vemtajas{
+  .ventajas{
     width: 100%!important;
     background-color:white!important;
     border-top: white solid 5vw;
@@ -2346,16 +2408,21 @@ margin-top: 50vw!important;
 }
 /*--------------------------------------video------------------------------------------------------------*/
 .videosunrep{
+
  
-  
-  
-  width: 90vw!important;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  width: 100%!important;
   height:auto!important;
 }
 .videosunrep iframe{
-
-width: 90vw!important;
-height: 40vw;
+  position: relative;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+width: 108vw!important;
+height: 100vw;
 margin-bottom: 1vw;
 }
 /*--------------------------------------media foco-----------------------------*/
@@ -2375,22 +2442,105 @@ margin-bottom: 1vw;
   left: -10vw;
   font-size: 3vw;
 }
+.texto-contenedor{
+  margin-top: 5vw!important;
+left: 25vw;
+  font-size: 4vw!important;
+  
+    }
+.texto-horas{
+  left: 45vw!important;
 }
-    .texto-contenedor{
-      margin-top: 5vw!important;
-    left: 25vw;
-      font-size: 4vw!important;
-      
-        }
-    .texto-horas{
-      left: 45vw!important;
-    }
-    .texto-min{
-      left: 65vw!important;
-    }
-    .texto-seg{
-      left: 85vw!important;
-    }
+.texto-min{
+  left: 65vw!important;
+}
+.texto-seg{
+  left: 85vw!important;
+}
+/*----------------------------Mapa Appp--------------------------*/
+.mapaes{
+  position: relative;
+  width: 160vw;
+  z-index: 0;
+  right: 25vw!important;
+}
+.dis-fondos{    
+  margin-left: 20%; 
+  margin-top: 8vw;  
+  font-size: 5vw;  
+}
+.por-syn{
+  
+  font-size: 4vw;
+  margin-left: 20%;
+  margin-top: -110vw;
+}
+.por-syn2{
+  margin-left: -75%!important;
+  font-size: 3.5vw;
+}
+.por-hawk{
+  
+  font-size: 4vw!important;
+  margin-left: 66%;
+  margin-top: -90vw;
+}
+.por-hawk2{
+  margin-top: -1vw;
+  font-size: 3.5vw;
+}
+.por-lion{
+  
+  margin-top: -110vw;
+  font-size: 4vw;
+  margin-left: 68%;
+}
+.por-lion2{
+  margin-left: 70%;
+  font-size: 3.5vw;
+}
+.por-reinversion{
+
+  margin-left: 18%;
+  margin-top: -55vw;
+  font-size: 4vw;
+
+}
+.por-reinversion2{
+  margin-left: -80%;
+  font-size: 3.5vw;
+}
+.por-sunholders{
+ 
+  margin-left: 63%;
+  font-size: 4vw;
+  margin-top: -59vw;
+}
+
+.por-sunholders2{
+  margin-top: 1%;
+  font-size: 3.5vw;
+  margin-left: 20%;
+}
+.por-equipo{
+  
+  margin-top: -40vw;
+  margin-left: 58%;
+  font-size: 4vw;
+}
+.por-equipo2{
+  margin-left: 3vw;
+  font-size: 3.5vw;
+  }
+  .sun-usd{
+    font-size: 4vw;
+    position: relative;
+    z-index: 2;
+  }
+}
+   
+    
+    
 @media screen and (max-width: 689px){
   .textsyn{
     top: 50vw!important;
@@ -2540,9 +2690,7 @@ margin-bottom: 1vw;
     background-position:center!important;  
   }
  
-  .hometext1{
-    margin-bottom: 5vw;
-  }
+  
   .boton1{
     width: 40vw!important;
   }
@@ -2563,6 +2711,7 @@ margin-bottom: 1vw;
   top: 6vw;
 }
 .hometext1{
+  margin-bottom: 5vw;
   line-height: normal!important;
 }
 
