--- a/src/App.css
+++ b/src/App.css
@@ -536,6 +536,7 @@ margin-bottom: 1vw;
  
   100%{
     filter: brightness(150%);
+    filter: drop-shadow(0px 10px 20px rgba(37, 1, 102, 0.788));
    
     
    }
@@ -1121,7 +1122,7 @@ white-space: normal;
 }
 .text-moneda img{
 
-  margin-bottom: 10vw;
+ 
 }
 .titu-token{
   color: #025889;
@@ -1163,6 +1164,80 @@ white-space: normal;
     font-weight: bold;
     text-transform: uppercase;
     
+  }
+  .cont-token{
+    position: relative;
+    height: 95vw!important;
+  }
+  .img-token{
+    top: 10vw;
+    height: 50vw;
+    right:25vw;
+    
+  }
+  .btn-img-token{
+  
+    width: 8vw!important;
+    height:8vw!important;
+    animation-name: walpanime;
+    animation-duration: 1s;
+    animation-iteration-count: infinite; 
+  }
+  .cont-text-token {
+    box-shadow: 0 0 15px #ddd;
+    font-size: 6vw;
+    color: #7B90A3;
+    font-family: 'Lato';
+    text-align: start;
+   justify-content: flex-start;
+    right: 10%;
+ overflow-x:hidden;
+ 
+height: 70vw;
+width: 120%!important;
+
+  }
+  
+ 
+  .card-link:hover img{
+    transform:scale(1.5);
+    filter: drop-shadow(2px 20px 1px rgba(60, 8, 156, 0.788));
+  }
+  .btn-img-token1{
+    position: absolute;
+right: 88vw;
+  }
+  
+  .btn-img-token2{
+    position: absolute;
+    top: 4vw;
+    right: 72vw;
+    
+  }
+  .btn-img-token3{
+    position: absolute;
+    top: 20vw;
+    right: 135%;
+    
+  }
+.btn-img-token4{
+  position: absolute;
+    top: 30vw;
+    right: 135%;
+    
+  }
+  .btn-img-token5{
+    position: absolute;
+    top: 45vw;
+    right: 145%;
+  }
+  .card-token{
+    border: none!important;
+    font-size: 4vw;
+    font-family: 'Lato';
+    text-align: start;
+   justify-content: flex-start;
+    background-color: transparent!important;
   }
   .text-titu-app h2{
     font-family: Lato!important;
@@ -2313,12 +2388,10 @@ margin-top: 3vw;
         line-height: 6vw!important;
       } 
       /*------------------------------------------------------rectangulo cap-------------------------------*/
-      .rectanguloimg{
-  
+      .rectanguloimg{  
        left: 2vw;
         width: 100vw;
-        height: 28vw;
-      
+        height: 28vw;      
       }
       /*--------------------------------------------------------tecnologias--------------------------------*/
       .tecno img{
@@ -2405,6 +2478,40 @@ margin-top: 50vw!important;
 .img-aple{
   
   left: 1vw!important;
+}
+.goo-aple{
+  
+  top: 8vw!important;
+  left: 60vw;
+}
+.img-goo{
+  width: 20vw;
+  height: 7vw;
+}
+.img-aple{
+  width: 20vw;
+  height: 7vw;
+  margin-top: -8vw;
+}
+.text-App-g{
+  width: 130vw!important;
+}
+.constru-cartera{
+ 
+ 
+  font-style: "Demi";
+  margin-top: 20vw;
+  
+  margin-left: 50vw;
+}
+.disponible-text{
+  
+  
+  margin-top: 25vw;
+  font-size: 3vw;
+  font-weight: bold;
+margin-left: 60vw;
+
 }
 /*--------------------------------------video------------------------------------------------------------*/
 .videosunrep{
