--- a/src/App.css
+++ b/src/App.css
@@ -68,21 +68,32 @@ margin: 0px;
   margin: 0px;
  }
  .fondogalaxy{
+   
    background-image:url("./images/fondogalaxy.svg")!important;
    background-size:contain;
    background-position:top;
-   
+  
    background-repeat:no-repeat;
    
+   }
+
+   #tsparticles{
+
+     z-index: 3!important;
+        
+    
+   }
+  
+   .particles-cont{
    
-   
-   
- }
+     z-index: 2;
+   }
  .moneda{ 
   position: relative!important;
   opacity: 0.91;
 		filter: drop-shadow(7px 11px 20px rgba(0, 0, 0, 1));
-		z-index: 0;
+   z-index: 1;
+   
 		width: 120vw!important;
 
 		left:-35vw;
@@ -104,7 +115,7 @@ margin: 0px;
  }
  
  .moneda1{
-
+z-index: 1!important;
    position: relative;
   filter: drop-shadow(7px 13px 9px rgba(0, 0, 0, 1));
   
@@ -2334,6 +2345,15 @@ margin-top: 3vw;
   background-position:center ;
   background-size:cover ;
 }
+#tsparticles{
+height: 100vw;
+  z-index: 3!important;
+     
+ 
+}
+.particles-cont{
+  height: auto;
+}
   /*-----------------------------media seccion1-------------------------*/
   .revo1{
    
@@ -2348,6 +2368,7 @@ margin-top: 3vw;
         margin-bottom: 1vw;
       }
       .moneda1{
+        z-index: 1;
         margin-top: 100px;
         font-size: 7vw;
       }
@@ -2364,7 +2385,7 @@ margin-top: 3vw;
         overflow: visible;
       }
       .parte{
-       
+        z-index: 1!important;
        line-height: normal;
         overflow: hidden;
       }
