--- a/src/App.css
+++ b/src/App.css
@@ -80,12 +80,14 @@ margin: 0px;
    #tsparticles{
 
      z-index: 3!important;
-        
+     height: 1600px;
     
    }
   
    .particles-cont{
-   
+   overflow: hidden;
+   width: 101%;
+   height: 1600px;
      z-index: 2;
    }
  .moneda{ 
@@ -136,7 +138,7 @@ filter: drop-shadow(0px 9px 6px rgba(204, 196, 192, 0.753));
     
     position: relative;    
    
-    
+    width: 40vw;
     text-align:left;
     font-family: 'Eras Demi ITC';
     font-style: oblique;
@@ -227,7 +229,7 @@ width: 100vw;
   
   position: relative!important;
   justify-content: center;
-  
+  z-index: 4;
   overflow: hidden;
   margin-bottom: 1vw;
   
@@ -2236,7 +2238,7 @@ margin-top: 3vw;
     .boton1{
       margin-bottom: 15vw;
       
-      width: 30vw!important;
+      width: 40vw!important;
     }
   }
   @media screen and (max-width:890px){
@@ -2356,18 +2358,21 @@ height: 100vw;
 }
   /*-----------------------------media seccion1-------------------------*/
   .revo1{
-   
+   position: relative;
     font-size: 7.5vw!important;
-    text-align: center!important;
-    margin: 4vw 0 0 0 ;
+    z-index: 5;
+    text-align: left!important;
+    margin: 4vw 0 0 -12vw ;
       
       }
       .tec1{
         text-align: center!important;
         font-size: 7.5vw;
+        margin-left: -12vw;
         margin-bottom: 1vw;
       }
       .moneda1{
+       
         z-index: 1;
         margin-top: 100px;
         font-size: 7vw;
@@ -2385,11 +2390,13 @@ height: 100vw;
         overflow: visible;
       }
       .parte{
+        
         z-index: 1!important;
        line-height: normal;
-        overflow: hidden;
+       
       }
       .boton1{
+        width: 40vw!important ;
         margin-bottom: 15vw;
         margin-left: 3vw;
         text-align: left!important;
@@ -2400,7 +2407,7 @@ height: 100vw;
         position: relative;
         justify-self: start;
        justify-content: center;
-        margin: 0 0 0 -10vw;
+        margin: 0 0 0 -15vw;
       
         font-size: 4vw;
         
@@ -2761,6 +2768,7 @@ left: 25vw;
         margin-top: -30vw; 
        }
        .boton1{
+         width: 40vw;
          margin-left: 10vw!important;
        }
       
@@ -2820,7 +2828,7 @@ left: 25vw;
  
   
   .boton1{
-    width: 40vw!important;
+    width: 60vw!important;
   }
   
 }
