--- a/src/App.css
+++ b/src/App.css
@@ -70,12 +70,18 @@ margin: 0px;
  .fondogalaxy{
    
    background-image:url("./images/fondogalaxy.svg")!important;
-   background-size:contain;
+   background-size:cover;
    background-position:top;
   
    background-repeat:no-repeat;
    
    }
+   .particles-cont{
+    overflow: hidden;
+    width: 101%;
+    height: 1600px;
+      z-index: 1;
+    }
 
    #tsparticles{
 
@@ -84,17 +90,13 @@ margin: 0px;
     
    }
   
-   .particles-cont{
-   overflow: hidden;
-   width: 101%;
-   height: 1600px;
-     z-index: 2;
-   }
+   
  .moneda{ 
   position: relative!important;
   opacity: 0.91;
 		filter: drop-shadow(7px 11px 20px rgba(0, 0, 0, 1));
-   z-index: 1;
+   z-index: 14!important;
+
    
 		width: 120vw!important;
 
@@ -110,9 +112,10 @@ margin: 0px;
 
  .contenedor{
    
-  width: 100vw!important;
+  width: 20vw!important;
   animation-delay:1s!important ;
     overflow: hidden;
+    z-index: unset;
 
  }
  
@@ -595,10 +598,11 @@ font-family: "Josefin Sans";
 /*-------------------------------------------------------FOCO-----------------------------------*/
 .sec6{
   position:relative;
-  border-top: white 1vw solid;
-  background-color: white!important;  
+  border-top:transparent 1vw solid;
+  
   justify-content: center!important;
   text-align: center;
+  margin-top: 7%;
    
 }
 .titulo6{
@@ -607,7 +611,7 @@ font-family: "Josefin Sans";
     
     justify-content: center!important;
     
-    margin: 2px 0 5px 0;
+    margin: 5px 0 5px 0!important;
     
     font-family: 'Barlow Condensed';
     font-style: normal;
@@ -727,7 +731,7 @@ font-family: 'Lucida Sans'!important;
  .fap-btn3-2{
    
 position: absolute;
-left:-110px;
+left:-80px;
 bottom: -60px!important;
  }
 
@@ -755,7 +759,7 @@ bottom: -60px!important;
  position: absolute;
 font-family: 'Josefin Sans';
   bottom:-59px;
- left: -110px;
+ left: -90px;
  }
 
  .fap-btn4:hover svg{
@@ -795,6 +799,11 @@ font-family: 'Josefin Sans';
   stroke-dashoffset: 180;
   stroke-width:15px;
   transition: 3s ease-in-out;
+}
+.svg2 circle{
+  display: flex;
+  position: relative;
+  left: -100px;
 }
 
 .svg3{
@@ -888,7 +897,7 @@ color: #024870;
 .contenedor-engra{
   overflow: hidden;
   height: 1650px;
-  background-color:white;
+  
 }
 .engranaje{
   display: flex;
@@ -975,10 +984,11 @@ color: #024870;
 }
 
 .modal-sym{
-  margin: 100px 0 0 0 ;
+  margin: 0 0 0 0 ;
   position: relative;
   background-color:#CEDEEEE6!important;
   color: #025889;
+  height: auto!important;
   text-align: center;
   
  
@@ -1134,10 +1144,7 @@ white-space: normal;
   
   color: #7B90A3;
 }
-.text-moneda img{
 
- 
-}
 .titu-token{
   color: #025889;
   filter: drop-shadow(7px 3px 8px rgba(0, 0, 0, 0.851));
@@ -1581,6 +1588,8 @@ border: none;
   position: absolute!important;
   font-size: 40px;
   white-space: normal;
+  
+  
   line-height: 15px!important;
   text-align: start;
   
@@ -2677,7 +2686,10 @@ left: 25vw;
     z-index: 2;
   }
 }
-   
+   /*----------------------------------------------footer--------------------------------------------------*/
+   .modal-title svg{
+     width:45vw ;
+   }
     
     
 @media screen and (max-width: 689px){
@@ -2791,7 +2803,7 @@ left: 25vw;
   top: 60vw!important;
 }
 .mintext{
-  top: 85vw;
+  top: 59vw;
 }
 
 .textsyn2{
@@ -2869,6 +2881,7 @@ left: 25vw;
     white-space: nowrap;
   }
   .mintext{
+    top: 85vw;
     left: -20vw!important;
     font-size: 4vw!important;
   }
@@ -2937,7 +2950,7 @@ top: 95vw!important;
   }
   .mintext{
     top: 93vw;
-    left: -20vw!important;
+    left: -40vw!important;
   }
   .fap-btn3{
     left: 55vw;
@@ -3131,11 +3144,14 @@ resize: none;
   }
 
   .fap-btn2{
-    position: relative;
+    
     top: 40vw!important;
-    left: -9vw;
-    z-index: 100;
-  ;
+    left: 1vw;
+    
+  
+  }
+  .textbtn2{
+    left: -6vw!important;
   }
   .fap-btn2 svg {
     left: -7vw!important;
@@ -3147,13 +3163,25 @@ resize: none;
     top: 105vw!important;
     left: -27vw;
   }
+  
   .mintext{
     top: 102vw;
     margin-left: 2vw!important;
   }
   .fap-btn3{
-    left: 40vw;
+  
+    text-align: center;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
   }
+  .textbtn3 {
+    vertical-align: middle;
+    left: -5vw;
+    align-items: center;
+    text-align: center;
+    font-size: 8vw!important;
+}
   .fap-btn3-2{
     width: 200px;
     height: 200px;
@@ -3166,10 +3194,10 @@ resize: none;
 
   }
   .fap-btn3 svg {
-    left: -2vw!important;
-    top: -4vw!important;
-    width: 40mm;
-    height: 40mm;
+    left: -6vw!important;
+    top: -7vw!important;
+    width: 43mm;
+    height: 43mm;
   }
   .mintext2{
     left: 2vw!important;
